# Learning_Quantum_Channel

./: .gitignore  CLAUDE.md  Check_data.ipynb  Draw_figure.ipynb  Learning_random_unitary.py  README.md  analyze_peak_sweep.py  check_truncation_N30.py  job.sh  job_depolarizing_sweep.sh  job_paper_extras.sh  job_peak_debug.sh  measure_loe.py  pyproject.toml  requirements.txt  run_depolarizing_sweep.py  run_peak_sweep.py
Learning_Lindbladian/: Learning_Lindbladian.py  Quantum_Channel_Learning.bib  Quantun_Channel_Learning.aux  Quantun_Channel_Learning.bbl  Quantun_Channel_Learning.blg  Quantun_Channel_Learning.fdb_latexmk  Quantun_Channel_Learning.fls  Quantun_Channel_Learning.out  Quantun_Channel_Learning.tex  TDME_Trott.py  Trotterization_TDSE.py  diag_weight1_to_weight2.py  diag_weight2_overfit.py  draw_figure.ipynb  driver_shard.py  fork_out.txt  generate_TDME_data.py  job_debug_array.sh  job_debug_first_order.sh  job_shard_template.sh  job_smoke_shard.sh  job_t0p2_a.sh  job_t0p2_b.sh  job_t0p2_c.sh  job_t0p4_a.sh  job_t0p4_b.sh  job_t0p4_c.sh  job_t0p6_a.sh  job_t0p6_b.sh  job_t0p8_a.sh  job_t0p8_b.sh  job_t1p0_a.sh  job_t1p0_b.sh  job_t2p0_a.sh  job_t2p0_b.sh  job_trott_array.sh  job_trott_first_order_array.sh  job_w1_vs_rand_array.sh  plot_pqc_vs_trotter.py  plot_results.py  (+7 more)
Learning_and_Compressing_a_Quantum_Circuit_with_Parametrized_Quantum_Circuits/: Quantum_Channel_Learning.aux  Quantum_Channel_Learning.bbl  Quantum_Channel_Learning.blg  Quantum_Channel_Learning.fdb_latexmk  Quantum_Channel_Learning.fls  Quantum_Channel_Learning.out  Quantum_Channel_Learning.tex  (+3 more)
(+535 files in other folders)
