[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qcl"
version = "0.1.0"
description = "Learning noisy quantum channels (Lindbladian dynamics) with tensor-network variational models"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "quimb",
    "cotengra",
]

[tool.setuptools]
packages = ["qcl"]
